--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,13 @@ h2 {
     font: 600 2.125rem/2.75rem "Poppins", sans-serif;
 }
 
+h2 span {
+    margin-top: -70px;
+    /* Size of fixed header */
+    padding-bottom: 300px;
+    display: block;
+}
+
 h3 {
     color: #353535;
     font: 600 1.75rem/2.375rem "Poppins", sans-serif;
