--- a/css/styles.css
+++ b/css/styles.css
@@ -1331,11 +1331,14 @@ a:hover.back-to-top {
 }
 
 
-/* Max-width 768px */
+/* Max-width 992px */
 
 @media (max-width: 992px) {
     .header .image-container {
         display: none;
+    }
+    .cards-1 {
+        height: 435px;
     }
 }
 
