--- a/css/styles.css
+++ b/css/styles.css
@@ -1334,8 +1334,8 @@ a:hover.back-to-top {
 /* Max-width 992px */
 
 @media (max-width: 992px) {
-    .header .image-container {
-        display: none;
+    .header {
+        background-image: none;
     }
     .cards-1 {
         height: 435px;
@@ -1431,7 +1431,6 @@ a:hover.back-to-top {
     }
     /* Header */
     .header {
-        background-position: center;
         text-align: left;
     }
     .header .text-container {
