--- a/css/styles.css
+++ b/css/styles.css
@@ -133,9 +133,7 @@ a:hover {
 
 .bg-gray {
     background-color: #f2f2f2;
-    background-size: cover;
     text-align: center;
-    max-width: 100%;
 }
 
 .btn-solid-reg {
@@ -1307,8 +1305,8 @@ a:hover.back-to-top {
     /* Services */
     .cards-1 .card {
         display: inline-block;
-        max-width: 100%;
-        width: 303px;
+        max-width: 80%;
+        width: 270px;
         vertical-align: top;
     }
     .cards-1 .card:nth-of-type(3n+2) {
@@ -1347,6 +1345,9 @@ a:hover.back-to-top {
 
 @media (min-width: 992px) {
     /* General Styles */
+    .header .image-container {
+        display: none;
+    }
     .h1-large {
         font-size: 4.5rem;
         line-height: 5.0rem;
@@ -1428,6 +1429,7 @@ a:hover.back-to-top {
     }
     /* Header */
     .header {
+        background-position: center;
         text-align: left;
     }
     .header .text-container {
