--- a/css/styles.css
+++ b/css/styles.css
@@ -552,7 +552,7 @@ a:hover {
 }
 
 .cards-1 .card {
-    max-width: 900px;
+    max-width: 330px;
     margin-right: auto;
     margin-bottom: 5rem;
     margin-left: auto;
@@ -567,22 +567,19 @@ a:hover {
 }
 
 .cards-1 .card-image {
-    display: inline-block;
-    width: 50%;
-    height: auto;
+    width: 100px;
+    height: 100px;
     margin-right: auto;
     margin-bottom: 1rem;
-    margin-left: 30px;
+    margin-left: auto;
 }
 
 .cards-1 .card-title {
     margin-bottom: 0.5rem;
-    margin-right: 30px;
 }
 
 .cards-1 p {
     margin-bottom: 0;
-    margin-right: 30px;
 }
 
 
@@ -1309,6 +1306,7 @@ a:hover.back-to-top {
     .cards-1 .card {
         display: inline-block;
         max-width: 80%;
+        width: 270px;
         vertical-align: top;
     }
     .cards-1 .card:nth-of-type(3n+2) {
@@ -1441,7 +1439,7 @@ a:hover.back-to-top {
     .cards-1 .card {
         display: inline-block;
         max-width: 100%;
-        width: 650px;
+        width: 302px;
         vertical-align: top;
     }
     .cards-1 .card:nth-of-type(3n+2) {
@@ -1595,6 +1593,9 @@ a:hover.back-to-top {
         padding-left: 2.5rem;
     }
     /* Services */
+    .cards-1 .card {
+        width: 330px;
+    }
     .cards-1 .card:nth-of-type(3n+2) {
         margin-right: 3.375rem;
         margin-left: 3.375rem;
