--- a/css/styles.css
+++ b/css/styles.css
@@ -552,8 +552,8 @@ a:hover {
 }
 
 .cards-1 .card {
-    max-width: 550px;
-    width: 500px;
+    max-width: 50%;
+    width: 600px;
     height: auto;
     margin-right: auto;
     margin-bottom: 5rem;
@@ -571,7 +571,7 @@ a:hover {
 
 .cards-1 .card-image {
     float: left;
-    width: 30%;
+    width: 25%;
     height: auto;
     margin-right: auto;
     margin-bottom: 1rem;
