--- a/css/styles.css
+++ b/css/styles.css
@@ -566,13 +566,14 @@ a:hover {
 
 .cards-1 .card-body {
     display: inline-block;
-    width: 70%;
+    float: none;
+    width: 330px;
 }
 
 .cards-1 .card-image {
-    display: inline-block;
-    width: 25%;
-    height: auto;
+    float: left;
+    width: 100px;
+    height: 100px;
     margin-right: auto;
     margin-bottom: 1rem;
     margin-left: auto;
