--- a/css/styles.css
+++ b/css/styles.css
@@ -572,11 +572,12 @@ a:hover {
 
 .cards-1 .card-image {
     float: left;
+    max-width: 110px;
     width: 100px;
     height: 100px;
     margin-right: auto;
     margin-bottom: 1rem;
-    margin-left: auto;
+    margin-left: -20px;
 }
 
 .cards-1 .card-title {
