--- a/css/styles.css
+++ b/css/styles.css
@@ -571,7 +571,7 @@ a:hover {
 
 .cards-1 .card-image {
     float: left;
-    width: 30%;
+    width: 45%;
     height: auto;
     margin-right: auto;
     margin-bottom: 1rem;
@@ -1240,12 +1240,68 @@ a:hover.back-to-top {
 }
 
 
+/*Extra Pages*/
+
+.ex-header {
+    padding-top: 8.5rem;
+    padding-bottom: 4rem;
+    background: linear-gradient(to bottom right, #F70B39, #0079f9);
+}
+
+.ex-header h1 {
+    color: #ffffff;
+}
+
+.ex-basic-1 .list-unstyled .fas {
+    font-size: 0.375rem;
+    line-height: 1.625rem;
+}
+
+.ex-basic-1 .list-unstyled .media-body {
+    margin-left: 0.5rem;
+}
+
+.ex-basic-1 .text-box {
+    padding: 1.25rem 1.25rem 0.5rem 1.25rem;
+    background-color: #f2f2f2;
+}
+
+.ex-cards-1 .card {
+    border: none;
+    background-color: transparent;
+}
+
+.ex-cards-1 .card .fa-stack {
+    width: 2em;
+    font-size: 1.125rem;
+}
+
+.ex-cards-1 .card .fa-stack-2x {
+    color: #F70B39;
+}
+
+.ex-cards-1 .card .fa-stack-1x {
+    color: #ffffff;
+    font-weight: 700;
+    line-height: 2.125rem;
+}
+
+.ex-cards-1 .card .list-unstyled .media-body {
+    margin-left: 0.75rem;
+}
+
+.ex-cards-1 .card .list-unstyled .media-body h5 {
+    margin-top: 0.125rem;
+    margin-bottom: 0.375rem;
+}
+
+
 /*Media Queries*/
 
 
-/* Max-width 768px */
+/* Min-width 768px */
 
-@media (max-width: 768px) {
+@media (min-width: 768px) {
     /* Header */
     .header {
         padding-top: 9.5rem;
@@ -1270,6 +1326,10 @@ a:hover.back-to-top {
     .form-2 .list-unstyled li {
         display: inline-block;
     }
+    /* Extra Pages */
+    .ex-basic-1 .text-box {
+        padding: 1.75rem 2rem 0.875rem 2rem;
+    }
 }
 
 
@@ -1285,9 +1345,9 @@ a:hover.back-to-top {
 }
 
 
-/* Max-width 992px */
+/* Min-width 992px */
 
-@media (max-width: 992px) {
+@media (min-width: 992px) {
     /* General Styles */
     .header .image-container {
         display: none;
@@ -1500,6 +1560,16 @@ a:hover.back-to-top {
         margin-right: 0;
         margin-left: 0.375rem;
     }
+    /* Extra Pages */
+    .ex-cards-1 .card {
+        display: inline-block;
+        width: 296px;
+        vertical-align: top;
+    }
+    .ex-cards-1 .card:nth-of-type(3n+2) {
+        margin-right: 1rem;
+        margin-left: 1rem;
+    }
 }
 
 
@@ -1600,5 +1670,13 @@ a:hover.back-to-top {
     }
     .footer .footer-col.third {
         text-align: right;
+    }
+    /* Extra Pages */
+    .ex-cards-1 .card {
+        width: 336px;
+    }
+    .ex-cards-1 .card:nth-of-type(3n+2) {
+        margin-right: 2.875rem;
+        margin-left: 2.875rem;
     }
 }
