--- a/css/styles.css
+++ b/css/styles.css
@@ -566,13 +566,13 @@ a:hover {
 
 .cards-1 .card-body {
     float: left;
-    width: 45%;
+    width: 65%;
 }
 
 .cards-1 .card-image {
     float: left;
-    width: 45%;
-    height: auto;
+    width: 110px;
+    height: 110px;
     margin-right: auto;
     margin-bottom: 1rem;
     margin-left: auto;
