--- a/css/styles.css
+++ b/css/styles.css
@@ -577,7 +577,7 @@ a:hover {
     float: left;
     width: 110px;
     height: 110px;
-    margin-right: auto;
+    margin-right: 50px;
     margin-bottom: 1rem;
     margin-left: 0px;
 }
