--- a/css/styles.css
+++ b/css/styles.css
@@ -1694,6 +1694,11 @@ a:hover.back-to-top {
         padding-right: 1.5rem;
         padding-left: 1.5rem;
     }
+    .solutions-sections {
+        margin-top: 4rem;
+        margin-bottom: 1rem;
+        background-color: #ffffff;
+    }
     .cards-1 .card {
         display: inline-block;
         width: 80%;
